@@ -25,7 +25,6 @@ FIND_TOOL([FIND], [find])
 FIND_TOOL([PATCH], [patch])
 FIND_TOOL([TAR], [tar])
 FIND_TOOL([CHMOD], [chmod])
-FIND_TOOL([MD5SUM], [md5sum])
 FIND_TOOL([SHA256SUM], [sha256sum])
 FIND_TOOL([WGET], [wget])
 FIND_TOOL([ZIP], [zip])
