@@ -1,6 +1,17 @@
 2009-11-17  Andrew John Hughes  <ahughes@redhat.com>
 
 	* Makefile.am:
+	Use SHA256 checksums for all.
+	(download-visualvm.stamp): Use SHA256 checksums.
+	(download-cacao.stamp): Likewise.
+	(download-jaf-drop.stamp): Likewise.
+	(download-jaxws-drop.stamp): Likewise.
+	* configure.ac:
+	Remove search for MD5SUM tool.
+	
+2009-11-17  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
 	Always compute the checksums of zip files
 	even when specified by --with-alt-src-zip.
 	Switch the alternate HotSpot build to SHA256
